--- a/style.css
+++ b/style.css
@@ -173,8 +173,7 @@ h1 {
     color: #000;
     background: #fff;
     border-radius: 15px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px;
     box-shadow: 0px 5px 14px 2px #595959;
     font-family: system-ui;
     word-wrap: break-word;
